[package]
name = "controller-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
borsh = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-program = { workspace = true }
spl-helper = { workspace = true }
spl-token-2022 = { workspace = true }
solana-readonly-account = { workspace = true }

lst-optimizer-utils = { workspace = true }

bincode = "1.3.3"
base64 = "0.22.1"

solana-transaction-status = "^2.0.0"
data-encoding = "2.8.0"
# link to https://github.com/moose-labs/S
s-controller-lib = { git = "https://github.com/moose-labs/S.git", branch = "custom_address" }
s_controller_interface = { git = "https://github.com/moose-labs/S.git", branch = "custom_address" }
generic_pool_calculator_interface = { git = "https://github.com/moose-labs/S.git", branch = "custom_address" }
# staking
stakedex_interface = { git = "https://github.com/igneous-labs/stakedex-sdk.git", branch = "master" }
# calculator
lido-calculator-lib = { git = "https://github.com/moose-labs/S.git", branch = "custom_address" }
marinade-calculator-lib = { git = "https://github.com/moose-labs/S.git", branch = "custom_address" }
spl-calculator-lib = { git = "https://github.com/moose-labs/S.git", branch = "custom_address" }
wsol-calculator-lib = { git = "https://github.com/moose-labs/S.git", branch = "custom_address" }
# helper
sanctum-token-ratio = { git = "https://github.com/igneous-labs/sanctum-solana-utils.git", features = [
    "borsh",
], branch = "f6c40a0-loose-deps" }
