[package]
name = "jupiter-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
jupiter-swap-api-client = { git = "https://github.com/moose-labs/jupiter-swap-api-client.git", package = "jupiter-swap-api-client", branch = "bump_sdk" }
